--- a/HTML/Freelancer/css/styles.css
+++ b/HTML/Freelancer/css/styles.css
@@ -1,3 +1,16 @@
+/* PseudoSelectores */
+
+:root{
+    --blanco: #FFFFFF;
+    --oscuro: #212121;
+    --primario: #FFC107;
+    --secundario: #0097A7;
+    --gris: #757575;
+
+    
+
+}
+
 html{
     font-size: 62.5%;
 }
@@ -6,11 +19,12 @@ body{
     font-size: 16px; /* 1rem = 10px */
 }
 
-h1{
+.titulo{
     text-align: center;
     font-size: 3.8rem;
 }
 
-span{
+.titulo span{
     font-size: 2rem;
 }
+
