--- a/HTML/Freelancer/css/styles.css
+++ b/HTML/Freelancer/css/styles.css
@@ -17,14 +17,35 @@ html{
 
 body{
     font-size: 16px; /* 1rem = 10px */
+    font-family: "Krub", sans-serif;
 }
 
 .titulo{
     text-align: center;
     font-size: 3.8rem;
+    
 }
 
 .titulo span{
     font-size: 2rem;
 }
 
+.contenedor{
+    width: 120rem;
+    margin: 0 auto;
+}
+
+
+.nav-bg{
+
+ background-color: var(--secundario);
+
+}
+.navgacion-principal{
+   
+}
+
+
+.navgacion-principal a{
+   background-color: var(--primario);
+}
