--- a/HTML/Freelancer/css/styles.css
+++ b/HTML/Freelancer/css/styles.css
@@ -15,6 +15,7 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
 }
 
 *,
@@ -24,7 +25,8 @@ html {
 }
 
 body {
-    font-size: 16px;  /* 1rem = 10px */
+    font-size: 16px;
+    /* 1rem = 10px */
     font-family: "Krub", sans-serif;
     /* Aplicando degradados con css  */
     background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
@@ -69,19 +71,50 @@ h3 {
     border-radius: .5rem;
     width: 90%;
     text-align: center;
-}
-
-.sombra{
-   -webkit-box-shadow: 0 5px 15px 0 rgba(112,112,112,0.54);
-   box-shadow: 0 5px 15px 0 rgba(112,112,112,0.54);
-   background-color: var(--blanco);
-   border-radius: 1rem;
+    border: none;
 }
 
 @media (min-width: 768px) {
     .boton {
         width: auto;
     }
+}
+
+.boton:hover {
+    cursor: pointer;
+}
+
+.sombra {
+    -webkit-box-shadow: 0 5px 15px 0 rgba(112, 112, 112, 0.54);
+    box-shadow: 0 5px 15px 0 rgba(112, 112, 112, 0.54);
+    background-color: var(--blanco);
+    border-radius: 1rem;
+
+}
+
+.w-100 {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-100 {
+        width: auto;
+    }
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
+   
+}
+
+@media (min-width: 768px) {
+   .alinear-derecha{
+      margin-top: 2rem;
+   }
+}
+
+.flex {
+    display: flex;
 }
 
 .nav-bg {
@@ -187,31 +220,47 @@ h3 {
 
 /* servicios */
 
+.servicios, 
+.navgacion-principal,
+.formulario{
+    /* Para que se detenga el scroll en esta seccion */
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 @media (min-width: 768px) {
-   .servicios{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
-}
-}
-
-.servicio{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
 }
 
-
-.servicio h3{
-  color: var(--secundario);
-  font-weight: bold;
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.servicio p{
+
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: bold;
+}
+
+.servicio p {
     line-height: 2;
+    text-align: center;
+    width: 95%;
 }
 
-.servicio .iconos{
+@media (min-width: 768px) {
+  .servicio p {
+    width: auto;
+}
+}
+
+.servicio .iconos {
     width: 15rem;
     height: 15rem;
     background-color: var(--primario);
@@ -224,23 +273,73 @@ h3 {
 
 /* Contacto */
 
-.formulario{
- background-color: var(--gris);
- width: min(60rem, 100%);
- margin: 0 auto;
- padding: 2rem;
- border-radius: 1rem;
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem, 100%);
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
 }
 
-.formulario fieldset{
-   border: none;
+.formulario fieldset {
+    border: none;
 }
 
-.formulario legend{
+.formulario legend {
     text-align: center;
     font-size: 1.8rem;
     text-transform: uppercase;
     font-weight: bold;
     margin-bottom: 2rem;
     color: var(--primario);
+}
+
+
+.campo {
+    margin-bottom: 1rem;
+}
+
+
+.campo label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .campo:nth-child(3),
+    .campo:nth-child(4){
+        grid-column: 1 / 3;
+    }
+}
+
+.campo textarea {
+    height: 20rem;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+}
+
+.contacto {
+    width: 95%;
+    margin: 0 auto;
+    padding-bottom: 2rem;
+}
+
+/* Footer */
+
+.footer{
+    text-align: center;
 }
