--- a/HTML/PatronesRWD/10-con_sidebar_flexbox/css/styles.css
+++ b/HTML/PatronesRWD/10-con_sidebar_flexbox/css/styles.css
@@ -49,3 +49,20 @@ p {
 
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px) {
+  .sidebar-flex{
+    display: flex;
+    justify-content: space-between;
+    column-gap: 2rem;
+  }
+
+  .article{
+    flex: 3;
+  }
+
+  .aside{
+     flex:1;
+  }
+
+}
