--- a/HTML/PatronesRWD/13-mostly_fluid/css/styles.css
+++ b/HTML/PatronesRWD/13-mostly_fluid/css/styles.css
@@ -26,6 +26,12 @@ p {
     font-size: 2rem;
 }
 
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto;
+    width: 95%;
+}
+
 .entrada-blog a {
     display: inline-block;
     background-color: #2196F3;
@@ -37,3 +43,15 @@ p {
 }
 
 /** CODIGO AQUI **/
+
+h1{
+    text-align: center;
+    font-size: 3rem;
+}
+
+@media (min-width:768px ) {
+  h1{
+    text-align: left;
+    font-size: 6rem;
+  }
+}
