--- a/HTML/PatronesRWD/13-mostly_fluid/css/styles.css
+++ b/HTML/PatronesRWD/13-mostly_fluid/css/styles.css
@@ -26,12 +26,6 @@ p {
     font-size: 2rem;
 }
 
-.contenedor{
-    max-width: 120rem;
-    margin: 0 auto;
-    width: 95%;
-}
-
 .entrada-blog a {
     display: inline-block;
     background-color: #2196F3;
@@ -43,15 +37,24 @@ p {
 }
 
 /** CODIGO AQUI **/
-
-h1{
-    text-align: center;
-    font-size: 3rem;
+.contenedor{
+    margin: 0 auto;
+    width: 95%;
+    max-width: 120rem;
 }
 
-@media (min-width:768px ) {
-  h1{
-    text-align: left;
-    font-size: 6rem;
+@media (min-width: 768px) {
+  .contenedor{
+    width: 80%;
   }
+}
+
+@media (min-width: 992px) {
+  .contenedor{
+    width: 60%;
+  }
+}
+
+img{
+    max-width: 100%;
 }
