--- a/HTML/blogdecafe_inicio/css/styles.css
+++ b/HTML/blogdecafe_inicio/css/styles.css
@@ -41,6 +41,7 @@ h2,
 h3,
 h4 {
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1 {
@@ -94,9 +95,13 @@ img {
 }
 
 @media (min-width: 768px) {
-  .header__texto {
-    margin-top: 15rem;
-  }
+    .header__texto {
+        margin-top: 15rem;
+    }
+}
+
+.barra {
+    padding-top: 4rem;
 }
 
 @media (min-width: 768px) {
@@ -120,13 +125,13 @@ img {
 }
 
 @media (min-width: 768px) {
-  .navegacion{
-    display: flex;
-    gap: 2rem;
-  }
+    .navegacion {
+        display: flex;
+        gap: 2rem;
+    }
 }
 
-.navegacion__enlace{
+.navegacion__enlace {
     display: block;
     text-align: center;
     font-size: 1.8rem;
@@ -134,23 +139,23 @@ img {
 }
 
 @media (min-width: 768px) {
-  .contenido-principal{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
-  }
+    .contenido-principal {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
 }
 
-.entrada{
-  border-bottom: 0.1rem solid var(--gris);
-  margin-bottom: 2rem;
+.entrada {
+    border-bottom: 0.1rem solid var(--gris);
+    margin-bottom: 2rem;
 }
 
-.entrada:last-of-type{
+.entrada:last-of-type {
     border-bottom: none;
 }
 
-.boton{
+.boton {
     display: block;
     background-color: var(--negro);
     font-family: var(--fuenteHeading);
@@ -164,15 +169,62 @@ img {
 }
 
 @media (min-width: 768px) {
-  .boton{
-     display: inline-block;
-  }
+    .boton {
+        display: inline-block;
+    }
 }
 
-.boton--primario{
-   background-color: var(--negro);
+.boton--primario {
+    background-color: var(--negro);
 }
 
-.boton--secundario{
+.boton--secundario {
     background-color: var(--primario);
+}
+
+.cursos {
+    list-style: none;
+}
+
+.widget__curso {
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.widget__curso:last-of-type {
+    border: none;
+    border-bottom: none;
+}
+
+.widget__curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+
+.widget__curso__info {
+    font-weight: bold;
+}
+
+.widget__curso__label,
+.widget__curso__info {
+    font-size: 2rem;
+}
+
+/* Footer */
+
+.footer {
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
+}
+
+/* Sobre Nosotros */
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+
 }
